# Tflite-on-DE1-SoC

./: CMakeLists.txt  Makefile  README.md  arm-gcc-toolchain.cmake  build.sh  run_directly.sh  tflite.cpp  transfer.sh
include/tensorflow/lite/: tflite_with_xnnpack_optional.h
include/tensorflow/lite/c/: c_api.h  c_api_experimental.h  c_api_internal.h  c_api_opaque_internal.h  common.h
include/tensorflow/lite/core/: interpreter.h  interpreter_builder.h  model_builder.h  subgraph.h
include/tensorflow/lite/core/api/: op_resolver_internal.h
include/tensorflow/lite/core/c/: c_api_types.h
include/tensorflow/lite/delegates/: delegate_test_util.h  utils.h
include/tensorflow/lite/delegates/flex/: buffer_map.h  subgraph_resource.h  util.h
include/tensorflow/lite/delegates/gpu/: delegate_options.h
include/tensorflow/lite/delegates/nnapi/: nnapi_delegate_kernel.h
include/tensorflow/lite/delegates/utils/: simple_delegate.h
include/tensorflow/lite/kernels/: acceleration_test_util_internal.h  builtin_op_kernels.h  dequantize.h  subgraph_test_util.h  test_util.h
include/tensorflow/lite/schema/: conversion_metadata_generated.h
include/tensorflow/lite/testing/: parse_testdata.h  tf_driver.h  tflite_diff_util.h
lib/fft2d-build/: Makefile
lib/ruy/profiler/: cmake_install.cmake
tensorflow/lite/: allocation.h  arena_planner.h  interpreter_test_util.h  logger.h  optional_debug_tools.h  signature_runner.h  test_util.h  util.h
tensorflow/lite/c/: builtin_op_data.h  c_api_opaque.h  c_api_types.h  common_internal.h
tensorflow/lite/core/api/: flatbuffer_conversions.h  op_resolver.h
tensorflow/lite/core/async/: async_kernel_internal.h  async_signature_runner.h  async_subgraph.h  backend_async_kernel_interface.h  common.h  task_internal.h
tensorflow/lite/core/c/: builtin_op_data.h  c_api.h  c_api_experimental.h  common.h
tensorflow/lite/core/kernels/: builtin_op_kernels.h  register.h
tensorflow/lite/delegates/: telemetry.h
tensorflow/lite/delegates/coreml/: coreml_delegate.h
tensorflow/lite/delegates/flex/: buffer_map_util.h
tensorflow/lite/delegates/gpu/: delegate.h
tensorflow/lite/delegates/hexagon/: hexagon_delegate_kernel.h
tensorflow/lite/delegates/nnapi/: acceleration_test_util.h  nnapi_delegate.h  nnapi_delegate_c_api.h
tensorflow/lite/delegates/utils/: simple_opaque_delegate.h
tensorflow/lite/delegates/xnnpack/: concatenation_tester.h  depthwise_conv_2d_tester.h  xnnpack_delegate.h
tensorflow/lite/experimental/remat/: metadata_util.h
tensorflow/lite/ios/: TensorFlowLiteC.h
tensorflow/lite/kernels/: kernel_util.h  reduce_test_common.h
tensorflow/lite/kernels/ctc/: ctc_beam_search.h
tensorflow/lite/kernels/internal/: strided_slice_logic.h
tensorflow/lite/profiling/: profile_buffer.h
tensorflow/lite/python/interpreter_wrapper/: interpreter_wrapper.h
tensorflow/lite/python/optimize/: calibration_wrapper.h
tensorflow/lite/schema/: schema_generated.h
tensorflow/lite/testing/: tflite_diff_flags.h  tflite_driver.h
tensorflow/lite/toco/: args.h
tensorflow/lite/toco/graph_transformations/: graph_transformations.h
tensorflow/lite/toco/logging/: conversion_log_util.h
tensorflow/lite/toco/tflite/: operator.h
tensorflow/lite/tools/: model_loader.h
tensorflow/lite/tools/benchmark/: benchmark_performance_options.h
tensorflow/lite/tools/delegates/: delegate_provider.h
tensorflow/lite/tools/evaluation/: utils.h
tensorflow/lite/tools/optimize/: operator_property.h
tensorflow/lite/tools/serialization/: writer_lib.h
tensorflow/lite/tools/versioning/: op_signature.h
(+126 files in other folders)
